choices and NanoMessage completion